# cloudrun-otel-collector-python-sample-app

./: .env.sample  README.md  Taskfile.yaml  pyproject.toml
app/: main.py
app/core/: config.py  logging.py
app/memory/: store.py
app/models/: todo.py
app/router/: todo.py
app/telemetry/: instrumentation.py  logging.py  tracing.py
docker/: Dockerfile
infra/cloudrun/: README.md  cloudrun.yaml
infra/terraform/: .terraform.lock.hcl  README.md  main.tf  outputs.tf  variables.tf
infra/terraform/modules/cloudrun/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/network/: main.tf  outputs.tf  variables.tf
otel/: collector-config.yaml
